--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "http-errors": "~2.0.0",
     "morgan": "~1.10.0",
     "mysql": "^2.18.1",
+    "mysql-migrations": "^1.0.7",
     "pug": "3.0.2"
   }
 }
